# memgar

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE  ML_SYSTEM.md  README.md  SECURITY_HARDENING_NOTES.md  TESTING.md  analyzer.py  cli.py  docker-compose.yml  gradient_boost_model.pkl  mkdocs.yml  pyproject.toml  rebuild_model.py  training
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: adversarial-retrain.yml  apply-code-hardening.yml  apply-report-recommendations.yml  apply-security-hardening.yml  ci.yml  docs.yml  feed-publish.yml  lint.yml  node-sdk.yml  publish-feed.yml  publish-pypi.yml  publish.yml  security-continuous.yml  security-quality.yml  threat-intel-sync.yml
deploy/: .env.example  Caddyfile  DEPLOY.md  deploy.sh  docker-compose.prod.yml  prometheus.yml
docs/: CNAME  changelog.md  index.md  quickstart.md  security.md
docs/about/: mission.md  roadmap.md
docs/architecture/: corpus.md  integrity.md  overview.md  pipeline.md  threats.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: welcome.md
docs/cloud/: deployment.md  overview.md  telemetry.md
docs/development/: calibration.md  contributing.md  training.md
docs/integration/: basic.md  configuration.md  langchain.md  memory-frameworks.md  node-sdk.md  plugins.md
docs/operations/: feed.md  forensics.md  health.md  observability.md  threat-feed-pipeline.md  threat-intel-pipeline.md
docs/resources/: deployment-checklist.md  index.md  pattern-ids.md  quickref.md
docs/stylesheets/: extra.css
docs/threats/: catalog.md  kill-chain.md  memory-poisoning-101.md
examples/: memgar.json  memgar.yaml  setup_env.sh
grafana/: memgar-dashboard.json
landing/: index.html
memgar/: __init__.py  action_guard.py  advanced_scoring.py  analyzer.py  attack_scenarios.py  auditor.py  auto_protect.py  behavioral_baseline.py  brand_bias.py  canary.py  circuit_breaker.py  cli.py  compliance.py  confidence_bypass_detector.py  config.py  correlation_detector.py  defense_pipeline.py  domain_detector.py  dow.py  ehr_attack_detector.py  embedding_anomaly.py  embeddings.py  enhanced_patterns.py  ensemble_voter.py  eu_ai_act.py  forensics  forensics.py  hitl.py  hunter.py  hybrid_defence_orchestrator  identity.py  learning.py  legitimate_filter.py  llm_analyzer.py  memgar_system.py  memory_graph.py  memory_guard.py  memory_integrity.py  memory_ledger.py  memory_store.py  (+37 more)
memgar/agents/: __init__.py  agent_security.py  agent_validator.py  delegation_monitor.py  mcp_security.py  swarm_detector.py  trust_chain.py
memgar/cloud/: __init__.py  aggregator.py  auth.py  client.py  config.py  server.py
memgar/core/: __init__.py  aho_corasick.py  response.py  smart_whitelist.py
memgar/feed/: __init__.py  cache.py  loader.py  models.py  verifier.py
memgar/frameworks/: __init__  __init__.py  langchain_deep.py  llamaindex_deep.py
memgar/gateway/: __init__.py  app.py  mcp_proxy.py  policy.py
memgar/integrations/: __init__.py  _vector_base.py  autogen.py  chroma.py  crewai.py  langchain.py  langchain_rag.py  letta.py  llamaindex_rag.py  mcp.py  mcp_server.py  mem0.py  openai_agents.py  openai_assistants.py  pinecone.py  qdrant.py  universal.py  weaviate.py
memgar/multimodal/: __init__.py  audio_analyzer.py  image_analyzer.py  multimodal_analyzer.py  pdf_analyzer.py
memgar/multistage/: __init__.py  advanced_multi_stage_detector .py  multi_stage_detector.py
memgar/observability/: __init__.py  drift_monitor.py  metrics.py  tracing.py
ml/: __init__.py  continuous_learning.py  quality_gate.py  thresholds.py  xgboost_training_pipeline.py
ml/adversarial/: __init__.py  attack_generator.py  variant_curator.py
ml/artifacts/: corpus_expansion.json  fpfn_calibration.json  fpfn_calibration_expanded.json  gradient_boost_model.pkl.config.json  quality_gate_report.json  similarity_calibration.json
ml/data/: CORPUS_LICENSES.md  augmented_memory_context.json  calibration_corpus.json  external_corpus_hard.json  external_corpus_raw.json  mined_hard_subset.json  mined_review_queue.json  training_data.json
ml/inference/: __init__.py  ml_detector.py  transformer_detector.py
ml/training/: hard_negative_miner.py  ml_feature_extractor.py  quick_train.py  train.py  transformer_trainer.py
plugins/memgar/: README.md
plugins/memgar/.claude-plugin/: plugin.json
proposed_patterns/: .gitignore
scripts/: attack_scenario_test.py  augment_memory_context.py  build_model.py  build_threat_catalog.py  calibrate_fpfn.py  calibrate_similarity.py  check_calibration_gate.py  check_expanded_gate.py  compute_semantic_centroids.py  expand_dataset.py  expand_threat_corpus.py  feed_changelog.py  feed_version.py  import_public_corpora.py  merge_corpus.py  mine_hard_negatives.py  pattern_corpus_gate.py  publish_feed.py  red_team_run.py  train_transformer.py  zero_shot_benchmark.py
scripts/intel/: __init__.py  common.py  curate.py  sync_cves.py  sync_huggingface_datasets.py  sync_jailbreak_repos.py  sync_mitre.py  sync_owasp.py
tests/: __init__.py  production_test_runner.py  test_advanced_detectors.py  test_adversarial.py  test_analyzer.py  test_brand_bias.py  test_canary_and_tool_guard.py  test_cli_memory.py  test_cloud.py  test_confidence_bypass_detector.py  test_continuous_learning.py  test_defense_pipeline.py  test_embedding_anomaly.py  test_enforcement.py  test_feature_extractor.py  test_feed.py  test_framework_secure_adapters.py  test_gateway.py  test_gateway_tool_firewall.py  test_health_visibility.py  test_hunter.py  test_integration.py  test_integrations_vector.py  test_intel_sync.py  test_langchain_memory_firewall.py  test_llamaindex_memory_firewall.py  test_load.py  test_memory_integrity.py  test_memory_store.py  test_memory_vault.py  test_merkle.py  test_ml_advanced_design.py  test_ml_detector.py  test_ml_integration.py  test_multilingual.py  test_observability.py  test_pattern_corpus_governance.py  test_policy_engine.py  test_real_world_attacks.py  test_realworld_action_guard.py  (+25 more)
(+6 files in other folders)
